[package]
name = "akusento"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.57"
features = [
    'AudioBuffer',
    'AudioContext',
    'AudioDestinationNode',
    'AudioNode',
    'AudioParam',
    'GainNode',
    'OscillatorNode',
    'OscillatorType',
]

[lib]
crate-type = ["cdylib", "rlib"]
